           libsbml NEWS -- History of user-visible changes
 
 === Version 3.3.0 (released 2009-01-02) ===

* New features:
  
  - Support for SBML Level 2 Version 4.

  - Tracker issue #1862805
    The ListOf class has a new function 'void ListOf::clear(bool doDelete = true)'.
    When doDelete is true all the items in the ListOf are cleared and deleted, when
    false the items are cleared from the ListOf but not deleted.  The user is 
    responsible for deleting the items.
 
  - Tracker issue #2376930
    Validation rules 10401 and 10402 had not previously been implemented.
    Thanks to Nicolas Rodriguez for reminding us.

  - Added functions 'getNumResources' and 'getResourceURI' to the
    CVTerm class.  These are convenience functions that allow the user 
    to determine how many resources are stored for the particular term
    and to index into the values directly.

  - Tracker issue #2015847
    Each ListOfXXX class now has derived get functions that return an
    object of the expected class e.g.  ListOfEvents->get() returns
    an Event *.

  - Tracker issue #2015847
    The clone function on each of the sbml component classes now returns
    a pointer to the appropriate class in place of the SBase * previously
    returned.

  - Tracker issue #2136796
    There is now additional code to check the ordering of assignment rules
    in a L1 or L2V1 model.  

  - Tracker issue #2114473.
    The UnitDefinition class has a new function isVariantOfSubstancePerTime()
    which returns true if the unitDefinition is a variant of the built-in
    unit of substance per the built-in unit of time, i.e. when multiplied by
    a unit of 'second' the resulting unitDefinition is a variant of substance,
    meaning moles or items (and grams or kilograms from SBML level 2 version 2 
    onwards) with only abritrary variations in scale or multiplier values.
    The function returns false if the unitDefinition is not a variant
    of substance per time.   
